plugins {
    id 'java'
    id 'application'
    id "org.springframework.boot" version "3.1.5"
    id 'io.spring.dependency-management' version '1.1.3'
}

repositories {
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.5'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'
    implementation 'com.pi4j:pi4j-core:1.4'
    implementation 'com.google.firebase:firebase-admin:9.2.0'
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.1.5'
    implementation 'org.springframework.boot:spring-boot-starter-jersey:3.1.5'
    implementation 'org.springframework.boot:spring-boot-configuration-processor:3.1.5'
    implementation 'org.springframework.boot:spring-boot-starter-activemq:3.1.5'
    implementation 'org.springframework:spring-websocket:6.0.13'
    implementation 'org.webjars:webjars-locator-core:0.54'
    implementation 'org.webjars:sockjs-client:1.5.1'
    implementation 'org.webjars:stomp-websocket:2.3.4'
    implementation 'org.webjars:bootstrap:5.3.2'
    implementation 'org.webjars:jquery:3.7.1'
    implementation 'jakarta.jms:jakarta.jms-api:3.1.0'
    implementation 'org.junit.jupiter:junit-jupiter:5.10.0'
    runtimeOnly 'org.springframework.boot:spring-boot-devtools:3.1.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.5'
    testImplementation 'org.mockito:mockito-core:5.6.0'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'piWater'
java.sourceCompatibility = JavaVersion.VERSION_17
mainClassName = 'PiWaterApplication'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}


bootJar {
    launchScript()

    manifest {
        attributes 'Start-Class': 'com.example.piwater.PiWaterApplication'
    }
}
jar {
    manifest {
        attributes(
                'Main-Class': 'com.example.piwater.PiWaterApplication'
        )
    }
}

application {
    mainClass = 'com.example.piwater.PiWaterApplication'
}